fix: increase icon opacity for better readability

--- a/app/components/SideNavItem/SideNavItem.module.scss
+++ b/app/components/SideNavItem/SideNavItem.module.scss
@@ -2,7 +2,7 @@
 	display: flex;
 	justify-content: center;
 	padding: 25px 0;
-	opacity: 0.3;
+	opacity: 0.4;
 	transition: all 0.16s cubic-bezier(0.165, 0.84, 0.44, 1);
 	cursor: pointer;
 
