--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -26,7 +26,7 @@ body {
 }
 
 .icon {
-	opacity: 0.3;
+	opacity: 0.4;
 	transition: all 0.16s cubic-bezier(0.165, 0.84, 0.44, 1);
 	cursor: pointer;
 
